--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-loader": "^0.5.5",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "parallax-js": "^3.1.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
