--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.2",
